--- a/index.html
+++ b/index.html
@@ -3,4 +3,21 @@
   <head>
   <title>the best webesite every</title>
   </head>
+  <h1 style="text-align:center; color:white;">
+    <b>welcome to the</b>
+  </h1>
+  <img src="https://r72.cooltext.com/rendered/cooltext503290954102477.gif"
+     alt="okay"
+     style="display:block; margin:auto;">
+  <h1 style="text-align:center; color:white;">
+    <mark>website</mark>ever=
+  </h1>
+
+  <style>
+  body {
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReyRi1ys-6SYmeAMI_V1VxzYiAnnwXnO-kwg&s");
+    background-repeat: repeat;
+    background-size: auto;
+  }
+  </style>
 </html>
