--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <mark>website</mark>ever=
   </h1>
   <p>
-    <h2style="text-align:center; color:white;><b>this is the people that wne ont he website:</b></h2>
+    <h2 style="text-align:center; color:white;"><b>this is the people that wne ont he website:</b></h2>
     <div style="text-align:center;">
       <script type="text/javascript" src="https://counter.websiteout.com/js/23/0/0/0"></script>
     </div>
